--- a/Microwave/Microwave.rc
+++ b/Microwave/Microwave.rc
@@ -80,7 +80,7 @@ BEGIN
     DEFPUSHBUTTON   "Open door",IDC_BUTTON_OPEN_DOOR,263,7,50,16
     PUSHBUTTON      "Close door",IDC_BUTTON_CLOSE_DOOR,263,25,50,16
     LTEXT           "Set Timer",IDC_STATIC,265,47,31,8
-    CONTROL         "",IDC_EDIT_LOG,"RichEdit20A",ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY | WS_BORDER | WS_VSCROLL | WS_TABSTOP,7,7,249,187
+    CONTROL         "",IDC_EDIT_LOG,"RichEdit20A",ES_MULTILINE | ES_READONLY | WS_BORDER | WS_VSCROLL | WS_TABSTOP,7,7,249,187
     CONTROL         "",IDC_EDIT_TIMER,"RichEdit20A",ES_AUTOHSCROLL | ES_READONLY | WS_BORDER | WS_TABSTOP,263,57,50,14
     CONTROL         "",IDC_SPIN_TIMER,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,302,57,11,14
     PUSHBUTTON      "Start",IDC_BUTTON_START,263,78,50,14
